--- a/adidas.html
+++ b/adidas.html
@@ -25,5 +25,12 @@
 
     <h3>Thank you</h3>
     <img src="download (2.jpeg" alt="esientien">
+    <ol>
+        <li>Plan your daily tasks carefully.</li>
+        <li>Stay consistent with your habits.</li>
+        <li>Track your progress regularly.</li>
+        <li>Reflect and adjust your approach.</li>
+    </ol>
+    
 </body>
 </html>
